# omegga-models

./: .gitignore  README.md  pyproject.toml
omegga_models/: __init__.py
omegga_models/masking/: __init__.py
omegga_models/stage_1_dark/: __init__.py  _logreg.py  too_dark_logreg.json
omegga_models/stage_2_anomaly_1/: __init__.py  _classifier.py  trash_logreg.json  trash_pca.npz
omegga_models/stage_3_anomaly_2/: __init__.py
omegga_models/stage_3_unfertilized/: __init__.py
omegga_models/stage_4_bubble/: __init__.py
omegga_models/stage_4_unfertilized/: __init__.py  _classifier.py
omegga_models/stage_5_bbd/: __init__.py  _classifier.py
omegga_models/stage_5_masking/: __init__.py
omegga_models/stage_6_pose/: __init__.py
omegga_models/stage_7_bbd/: __init__.py  _classifier.py
omegga_models/stage_7_bbd_hnm/: __init__.py  _classifier.py
omegga_models/stage_7b_marbling/: __init__.py  _classifier.py
