[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omegga-models"
version = "2026.5.8"
description = "Shared inference bundles for the omegga egg-sorting pipeline (7 stages)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "THEO Labs", email = "leon@theolabs.xyz" }]
license = { text = "Proprietary" }

# Lightweight stages (1, 4) and the placeholder stages (3, 6) work with just numpy + cv2.
# Heavy stages (2, 5, 7) lazy-load their deps — install them via the [ml] extra below
# if you actually call into those stages.
dependencies = [
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
]

[project.optional-dependencies]
# Full inference: pulls torch, timm, open-clip, segmentation-models-pytorch.
# Use this in production-henne and anywhere you need stages 2 / 5 / 7.
ml = [
    "torch>=2.0",
    "timm>=0.9",
    "open-clip-torch>=2.24",
    "segmentation-models-pytorch>=0.3",
    "pillow>=10.0",
]

[tool.setuptools.packages.find]
include = ["omegga_models*"]

[tool.setuptools.package-data]
"omegga_models.stage_1_dark" = ["*.json"]
"omegga_models.stage_2_anomaly_1" = ["*.json", "*.npz"]
"omegga_models.stage_5_masking" = ["*.pth"]
"omegga_models.stage_7_bbd" = ["*.pth"]
